fix mobile layout for home and posts pages, improve readability of post, add aria labels for interactive elements (#39)

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -4,8 +4,8 @@
   font-size: 2rem;
   font-weight: 600;
   color: var(--text-main);
-  margin-top: 4rem;
-  margin-bottom: 2rem;
+  margin-top: 4.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .post h3 {
@@ -18,7 +18,7 @@
 .post p {
   font-size: 1.6rem;
   color: var(--text-main);
-  line-height: 1.75;
+  line-height: 1.625;
 }
 
 .post p:not(:last-of-type) {
@@ -29,12 +29,15 @@
   line-height: 1.5;
   font-size: 1.6rem;
   border-radius: 1.5rem;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
   background-color: #1D1E25;
 }
 
 .post .notice {
   padding: 3.5rem;
-  margin-bottom: 2rem;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
   border-left-width: 5px;
   border-radius: 1.5rem;
   border-left-style: solid;
