--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -49,3 +49,7 @@
 .no-decoration {
   text-decoration: none;
 }
+
+.leading-normal {
+  line-height: 1.5;
+}
